# mjepa

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  build_extensions.py  config.yaml  hatch_build_hook.py  package-lock.json  pyproject.toml
.circleci/: config.yml
analysis/chest/: analyze.sh
analysis/cifar10/: analyze.sh
analysis/ct/: analyze.sh
analysis/mammo/: analyze.sh
config/chest-xray/mjepa/: vit-base.yaml
config/cifar10/finetune/: vit-small.yaml
config/cifar10/mae/: vit-small.yaml
config/cifar10/mjepa/: vit-small-old.yaml  vit-small.yaml
config/cifar10/scratch/: vit-small.yaml
config/cifar100/finetune/: vit-small.yaml
config/cifar100/mjepa/: vit-small.yaml
config/ct/: mjepa-vit-b.yaml
config/mammo/density/: vit-large.yaml  vit-small.yaml
config/mammo/mae/: vit-base.yaml
config/mammo/mjepa/: vit-base-swiglu.yaml  vit-base.yaml  vit-large.yaml  vit-small-swiglu.yaml  vit-small.yaml
csrc/: invert.cu  mixup.cu  noise.cu  posterize.cu
mjepa/: __init__.py  _version.py  jepa.py  logging.py  mae.py  metrics.py  model.py  optimizer.py  trainer.py
mjepa/augmentation/: __init__.py  invert.py  mixup.py  noise.py  pointwise.py  posterize.py
mjepa/data/: __init__.py  nih_chest.py  tiff.py
mjepa/visualization/: __init__.py  attention.py  cosine.py  norm.py  pca.py  pos_enc.py  runtime.py
scripts/: cifar10_attention.py  cifar10_cosine.py  cifar10_norms.py  cifar10_visualize.py  cosine_visualize.py  pca_visualize.py  plot_norms.py  position_visualize.py  runtime_visualize.py
tests/: conftest.py  run_tests.py  test_jepa.py  test_logging.py  test_metrics.py  test_model.py  test_optimizer.py  test_trainer.py  test_version.py  test_visualization.py
tests/test_augmentation/: test_invert.py  test_mixup.py  test_noise.py  test_posterize.py
tests/test_data/: test_tiff.py
trainers/chest-xray/: jepa.py  jepa_nih.py
trainers/cifar10/: jepa.py  mae.py  sft.py
trainers/cifar100/: jepa.py  sft.py
trainers/ct/: jepa.py
trainers/mammo/: density.py  jepa.py  mae.py
