[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "mjepa"
description = ""
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Scott Chase Waggener", email = "chase.waggener@icloud.com" },
]
dependencies = [
    "torch",
    "torchvision",
    "einops",
    "ninja",
    "pyyaml",
    "torchmetrics",
    "pandas",
    "pyarrow",
    "safetensors",
    "tqdm",
    "vit @ git+https://github.com/TidalPaladin/vit.git",
    "dicom-preprocessing @ git+https://github.com/medcognetics/dicom-preprocessing.git",
]
readme = "README.md"
dynamic = [
    "version",
]

[project.license]
text = "Apache"

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
exclude = [
    "_version.py",
]

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6,E203"
in-place = true
recursive = true
aggressive = 3
exclude = "_version.py"

[tool.black]
line-length = 120
extend-exclude = "_version.py"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false
skip_glob = [
    "*/_version.py",
]

[tool.pyright]
include = [
    "mjepa",
    "tests",
    "trainers",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/_version.py",
]
ignore = [
    "src/oldstuff",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
markers = [
    "ci_skip",
    "cuda",
]
filterwarnings = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mjepa/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
