[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "mjepa"
description = ""
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Scott Chase Waggener", email = "chase.waggener@icloud.com" },
]
dependencies = [
    "torch",
    "torchvision",
    "einops",
    "ninja",
    "pyyaml",
    "torchmetrics",
    "pandas",
    "pyarrow",
    "safetensors",
    "tqdm",
    "vit @ git+https://github.com/TidalPaladin/vit.git",
    "wandb>=0.23.0",
]
readme = "README.md"
dynamic = [
    "version",
]

[project.optional-dependencies]
dicom = [
    "dicom-preprocessing @ git+https://github.com/medcognetics/dicom-preprocessing.git",
]

[dependency-groups]
dev = [
    "basedpyright",
    "coverage",
    "pdbpp",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-mock",
    "ruff",
]

[project.license]
text = "Apache"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = false
combine-as-imports = true

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["mjepa", "tests", "trainers"]
exclude = ["**/node_modules", "**/__pycache__", "**/.pytest_cache", "**/_version.py"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
markers = [
    "ci_skip",
    "cuda",
]
filterwarnings = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mjepa/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
